--- a/app/src/main/res/layout/overview_fragment_nsclient_tablet.xml
+++ b/app/src/main/res/layout/overview_fragment_nsclient_tablet.xml
@@ -27,62 +27,54 @@
 
                 </androidx.recyclerview.widget.RecyclerView>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <LinearLayout
                     android:id="@+id/overview_looplayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toTopOf="@+id/overview_pumpstatuslayout"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/overview_notifications">
+                    android:orientation="horizontal"
+                    android:paddingTop="2dp">
 
                     <TextView
                         android:id="@+id/overview_apsmode"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:gravity="center_vertical|center_horizontal"
-                        android:paddingTop="3dp"
                         android:paddingBottom="3dp"
-                        android:text="@string/openloop"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/overview_activeprofile"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:paddingTop="3dp"
+                        android:text="Open Loop"
+
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 
                     <TextView
                         android:id="@+id/overview_activeprofile"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
+                        android:layout_gravity="right"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:gravity="center_vertical|center_horizontal"
-                        android:paddingTop="3dp"
                         android:paddingBottom="3dp"
-                        android:text="@string/profile"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/overview_temptarget"
-                        app:layout_constraintStart_toEndOf="@+id/overview_apsmode"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:paddingTop="3dp"
+                        android:text="Profile"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
 
                     <TextView
                         android:id="@+id/overview_temptarget"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
                         android:gravity="center_vertical|center_horizontal"
-                        android:paddingTop="3dp"
                         android:paddingBottom="3dp"
-                        android:text="@string/temptargetshort"
+                        android:paddingTop="3dp"
+                        android:text="TempTarget"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="@color/mdtp_white"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/overview_activeprofile"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:textColor="@color/mdtp_white" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/overview_pumpstatuslayout"
